Begining to config api keys

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -15,7 +15,7 @@
             <div>
                 <li><a href="/">Home</a></li>
                 <li><a href="/documentation">Documentation</a></li>
-                <li><a href="/login">Login/Register</a></li>
+                <li><a href="/profile">Login/Register</a></li>
             </div>
         </div>
     </nav>
@@ -44,7 +44,7 @@
                 <h3>Where do i start?</h3>
 
                 <div>
-                    To use this API you have to <a href="/login">Login or sign up</a> first,
+                    To use this API you have to <a href="/profile">Login or sign up</a> first,
                     then you can start by reading the <a href="/documentation">documentation</a>.
                 </div>
             </div>
