--- a/src/views/index.html
+++ b/src/views/index.html
@@ -14,7 +14,7 @@
 
             <div>
                 <li><a href="/">Home</a></li>
-                <li><a href="/documentation">Documentation</a></li>
+                <li><a href="https://github.com/MatiasFranco289/Mistborn-API">Documentation</a></li>
                 <li><a href="/profile">Login/Register</a></li>
             </div>
         </div>
